fixed broken toolbars in compact/contrast themes

--- a/themes/compact/style.scss
+++ b/themes/compact/style.scss
@@ -16,20 +16,27 @@
     }
 }
 
-.mainpage-header:hover {
-    height: 64px !important;
-    transition: height 250ms ease;
-}
-
-.mainpage-header:hover .button-text {
-    opacity: 1;
-    transition: opacity 250ms ease 100ms;
-}
-
-.mainpage-header .button-text {
+.mainpage-header .btn {
+  .button-text {
     opacity: 0;
     transition: opacity 250ms ease;
+
+    position: absolute;
+    top: 32px;
+    z-index: 1;
+    background-color: $brand-bg;
+    border: $border-width solid $border-color;
+    padding: 8px;
+    font-size: 1em;
+    pointer-events: none;
+  }
+
+  &:hover .button-text {
+    opacity: 1;
+    transition: opacity 250ms ease 100ms;
+  }
 }
+
 
 // if the sidebar is collapsed, show the tab name when hovering
 // (this conflicts a bit with the tooltip which we can't disable from css)
